kustomize/base/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: w16
spec:
  replicas: 1
  revisionHistoryLimit: 1
  template:
    spec:
      containers:
        - name: w16
          image: docker.seankhliao.com/w16:latest
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /data
              name: data
      enableServiceLinks: false
      serviceAccountName: w16
      terminationGracePeriodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: w16-data
